--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,4 +100,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
     implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
 
+    // Mpchart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
 }
