--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,5 +111,6 @@ dependencies {
 
     // MpChart
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
-
+    //GraphView
+    implementation 'com.jjoe64:graphview:4.2.2'
 }
